[gd_scene load_steps=6 format=2]

[ext_resource path="res://Reused/ReusableSystems/Theme/1/Font/SourceSansPro-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Nodes/PlayerNode/PlayerMenus/MainMenu/MainMenuButton.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "Selected"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Visual:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 13, 0 ), Vector2( 100, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Unselected"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Visual:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 100, 0 ), Vector2( 13, 0 ) ]
}

[node name="MainMenuButton" type="Control"]
margin_right = 427.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 50 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visual" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_right = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Visual"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_right = -11.0
custom_fonts/font = SubResource( 1 )
text = "Option"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Selected = SubResource( 2 )
anims/Unselected = SubResource( 3 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
